RESOLVED FIXED264845
REGRESSION (270325@main): Overrelease of NSColor under PageClientImpl::appUsesCustomAccentColor
https://bugs.webkit.org/show_bug.cgi?id=264845
Summary REGRESSION (270325@main): Overrelease of NSColor under PageClientImpl::appUse...
Tim Horton
Reported 2023-11-14 16:32:56 PST
REGRESSION (270325@main): Overrelease of NSColor under PageClientImpl::appUsesCustomAccentColor
Attachments
Tim Horton
Comment 1 2023-11-14 16:33:18 PST
Tim Horton
Comment 2 2023-11-14 16:34:35 PST
EWS
Comment 3 2023-11-14 17:12:31 PST
Committed 270735@main (9ed78dcdcb4a): <https://commits.webkit.org/270735@main> Reviewed commits have been landed. Closing PR #20509 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.