Cherry-pick 9ed78dcdcb4a. rdar://118249650

REGRESSION (270325@main): Overrelease of NSColor under PageClientImpl::appUsesCustomAccentColor
    https://bugs.webkit.org/show_bug.cgi?id=264845
    <rdar://problem/118312264>

    Reviewed by Aditya Keerthi, Chris Dumez and Simon Fraser.

    * Source/WebKit/UIProcess/mac/PageClientImplMac.mm:
    (WebKit::PageClientImpl::appUsesCustomAccentColor):
    We don't own these colors, don't adopt them.

    Canonical link: https://commits.webkit.org/270735@main

Identifier: 267815.584@safari-7617-branch